--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -218,11 +218,28 @@
 </div>
 </div>
 </div>
-<!--<div class="kyc-banner" *ngIf="verificationStatus !== KYC_STATUS.SUCCESS">-->
-  <div class="kyc-banner" *ngIf="true">
-    <img src="assets/img/ieo/kyc-img.png" alt="" (click)="bannerClick()">
+<div class="kyc-banner" *ngIf="verificationStatus !== KYC_STATUS.SUCCESS" (click)="bannerClick()">
+    <div class="kyc-banner-inner">
+        <div class="banner-img">
+          <img src="assets/img/ieo/kyc-img.png" alt="">
+        </div>
+      <div class="content-wr">
+        <div class="kyc-title">
+          <h4>Get ready for launch</h4>
+        </div>
+        <div class="kyc-description">
+          <p>Verify your account id participate</p>
+        </div>
+        <div class="button-wr">
+          <button class="standart-btn" (click)="bannerClick()">
+            <span>Verify account now</span>
+          </button> 
+        </div>
+      </div>
+    </div>
+    
   </div>
-  <div class="ieo-list">
+  <div class="ieo-list" *ngIf="ieoList.length">
     <div class="ieo-list-wr">
       <ng-container *ngFor="let item of ieoList">
         <div class="ieo-list-item {{item.status  | showStageStatus:true | lowercase}}">
