--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -305,6 +305,7 @@
 			position: relative;
 			overflow: hidden;
 			padding: 1.4em 0;
+			cursor: pointer;
 		}
 		.banner-img{
 			position: absolute;
