--- a/src/app/shared/components/popup-buy-ieo/popup-buy.component.html
+++ b/src/app/shared/components/popup-buy-ieo/popup-buy.component.html
@@ -63,7 +63,7 @@
         <span class="temp-style">{{IEOData.currencyName}}</span>
       </div>
       <div class="pay">
-        <p>{{'Pay:' | translate}} {{((pay || 0) * IEOData.rate ) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</p>
+        <p>{{'Pay:' | translate}} {{((pay || 0)) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} BTC</p>
       </div>
       <button
         class="btn btn--active btn--center btn-ieo"
