--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -460,7 +460,9 @@
 			}
 		}
 		.title-wr{
-			margin-bottom: .9em;
+			// margin-bottom: .9em;
+			margin-bottom: .1em;
+			height: 1.7em;
 			h3{
 				font-weight: 500;
 				font-size: .8em;
@@ -517,6 +519,7 @@
 		}
 		.description-wr{
 			margin-bottom: .8em;
+			
 			@media(max-width: 620px){
 				font-size: 1.2em;
 			}
@@ -525,6 +528,28 @@
 				font-size: .58em;
 				line-height: 1.25;
 				color: #747B8D;
+				height: 3.7em;
+				overflow: hidden;
+				position: relative;
+				&.small-txt-length{
+					&::after{
+						display: none;
+					}
+				}
+				&:not(:empty){
+					&::after{
+						content: '...';
+						position: absolute;
+						bottom: 0;
+						right: 0;
+						padding: 0 .24em;
+						background: #fff;
+						font-weight: 400;
+						font-size: 1em;
+						line-height: 1.25;
+						color: #747B8D;
+					}
+				}
 			}
 		}
 		.button-part{
@@ -746,6 +771,7 @@
 			justify-content: space-between;
 			align-items: flex-end;
 			margin-bottom: .3em;
+			line-height: .85;
 		}
 		.currency-buyed{
 
