--- a/src/assets/scss/pages/ieo/_common-ieo.scss
+++ b/src/assets/scss/pages/ieo/_common-ieo.scss
@@ -551,8 +551,8 @@
 				font-size: .58em;
 				line-height: 1.25;
 				color: #747B8D;
-				// height: 3.55em;
-				// overflow: hidden;
+				height: 3.55em;
+				overflow: hidden;
 				// position: relative;
 				
 			}
